feat(conf): make script work with many user groups

--- a/vps/vps-entrypoint.conf.example
+++ b/vps/vps-entrypoint.conf.example
@@ -6,8 +6,8 @@ HOME="/home"
 ROOT_PASSWORD="root"
 
 # User variables
-USER_GROUP="admin"
 USER_NAME="username"
+USER_GROUPS="username adm sudo"
 USER_PASSWORD="password"
 
 # User gecos
