--- a/vps/vps-entrypoint.conf.example
+++ b/vps/vps-entrypoint.conf.example
@@ -1,6 +1,7 @@
 # Global variables
-LOCALE="en_GB.UTF-8"
+LOCALE="en_US.UTF-8"
 HOME="/home"
+DEPENDENCIES="curl git vim wget"
 
 # Root variables
 ROOT_PASSWORD="root"
