--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 *.conf
 *.pub
 
-# Created by https://www.gitignore.io/api/node,macos
-# Edit at https://www.gitignore.io/?templates=node,macos
+
+# Created by https://www.gitignore.io/api/node,macos,visualstudiocode
+# Edit at https://www.gitignore.io/?templates=node,macos,visualstudiocode
 
 ### macOS ###
 # General
@@ -115,4 +116,15 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
-# End of https://www.gitignore.io/api/node,macos
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
+# End of https://www.gitignore.io/api/node,macos,visualstudiocode
