refactor(conf): rename example files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 ### Custom ###
 *.conf
+!example.*.conf
 *.pub
-
+!example.*.pub
 
 # Created by https://www.gitignore.io/api/node,macos,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,macos,visualstudiocode
