--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "main": "index.js",
     "scripts": {
         "release": "standard-version",
-        "postchangelog": "replace 'https://github.com/myproject/issues/' 'https://github.com/valentinbercot/vps-init/issues' CHANGELOG.md & replace 'https://github.com/myproject/compare/' 'https://github.com/valentinbercot/vps-init/compare/' CHANGELOG.md",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -20,6 +19,7 @@
     },
     "standard-version": {
         "skip": {
+            "commit": true,
             "tag": true
         }
     }
